--- a/TA21/index.html
+++ b/TA21/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <style src="styles.css"></style>
+        <link rel="stylesheet" href="styles.css">
         <h1>Este es el TA21</h1>
     </head>
     <body>
